- Added a speaker detail view - Refactored the ConferenceController to persist the Speakers as full objects and not only string lists.

--- a/core/src/main/flex/DukeConStyle.css
+++ b/core/src/main/flex/DukeConStyle.css
@@ -14,6 +14,13 @@
     color: #FFFFFF;
 }
 
+.subTitle {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 30px;
+    color: #DDDDDD;
+}
+
 .content {
     fontFamily: _sans;
     fontWeight: normal;
