--- a/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
@@ -2,11 +2,13 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
                 xmlns:u="org.dukecon.utils.*"
-                height="136">
+                height="136"
+                click="onItemClick(event)">
 
   <fx:Script>
     <![CDATA[
     import org.dukecon.controller.TrackController;
+    import org.dukecon.events.ListEvent;
 
     [Bindable]
     protected var trackIcon:Class;
@@ -24,6 +26,10 @@
       } else {
         trackIcon = null;
       }
+    }
+
+    protected function onItemClick(event:MouseEvent):void {
+      dispatchEvent(new ListEvent(data, ListEvent.ITEM_SELECTED));
     }
 
     ]]>
