--- a/core/src/main/flex/org/dukecon/views/LocationView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationView.mxml
@@ -5,7 +5,7 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
         xmlns:u="org.dukecon.utils.*"
-        title="{resourceManager.getString('dukecon', 'speaker.title')}">
+        title="{resourceManager.getString('dukecon', 'location.title')}">
 
     <fx:Metadata>
         [ResourceBundle("dukecon")]
@@ -13,17 +13,13 @@
 
     <fx:Script>
         <![CDATA[
-        import org.dukecon.controller.ConferenceController;
-        import org.dukecon.controller.SpeakerController;
-        import org.dukecon.controller.TrackController;
-        import org.dukecon.model.Speaker;
-        import org.dukecon.model.Talk;
+        import org.dukecon.controller.LocationController;
 
         [Bindable]
-        protected var speaker:Speaker;
+        protected var location:String;
 
         [Bindable]
-        protected var speakerPortrait:Class;
+        protected var locationIcon:Class;
 
         [Bindable("dataChange")]
         override public function get data():Object {
@@ -32,10 +28,9 @@
 
         override public function set data(value:Object):void {
             super.data = value;
-            speaker = Speaker(value);
-            speakerPortrait = SpeakerController.instance.getIconForSpeaker(speaker.name);
+            location = String(value);
+            locationIcon = LocationController.instance.getIconForLocation(location);
         }
-
         ]]>
     </fx:Script>
 
@@ -52,8 +47,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{speaker.name}" top="22" left="20" width="440" styleName="title"/>
-                <s:Label text="{speaker.company}" top="80" left="20" width="440" styleName="subTitle"/>
+                <s:Label text="{location}" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
@@ -64,23 +58,8 @@
                     </s:stroke>
                 </s:Rect>
 
-                <u:VectorImage source="{speakerPortrait}" top="22" right="22" width="116" height="116"/>
+                <u:VectorImage source="{locationIcon}" top="22" right="22" width="116" height="116"/>
             </s:Group>
-            <s:Label text="{speaker.bio}" styleName="content" width="{parent.width - 20}"/>
-            <s:Form width="100%">
-                <s:FormItem label="Email">
-                    <s:Label text="{speaker.email}"/>
-                </s:FormItem>
-                <s:FormItem label="Website">
-                    <s:Label text="{speaker.website}"/>
-                </s:FormItem>
-                <s:FormItem label="Twitter">
-                    <s:Label text="{speaker.twitter}"/>
-                </s:FormItem>
-                <s:FormItem label="Google+">
-                    <s:Label text="{speaker.gplus}"/>
-                </s:FormItem>
-            </s:Form>
         </s:VGroup>
     </s:Scroller>
 
