--- a/core/src/main/flex/org/dukecon/views/LocationsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationsView.mxml
@@ -18,6 +18,7 @@
 
     import org.dukecon.controller.ConferenceController;
     import org.dukecon.events.ConferenceDataChangedEvent;
+    import org.dukecon.events.ListEvent;
 
     [Bindable]
     protected var listData:ArrayCollection;
@@ -26,15 +27,21 @@
       ConferenceController.instance.addEventListener(
               ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, onConferenceDataChanged);
       listData = ConferenceController.instance.locations;
+      list.addEventListener(ListEvent.ITEM_SELECTED, onLocationSelected)
     }
 
     protected function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
       listData = ConferenceController.instance.locations;
     }
+
+    protected function onLocationSelected(event:ListEvent):void {
+      navigator.pushView(LocationView, event.data);
+    }
+
     ]]>
   </fx:Script>
 
-  <s:List width="100%" height="100%"
+  <s:List id="list" width="100%" height="100%"
           itemRenderer="org.dukecon.itemrenderer.LocationItemRenderer"
           dataProvider="{listData}"/>
 
