- Added lists of talks to the detail views for tracks, locations and speakers

--- a/core/src/main/flex/DukeConStyle.css
+++ b/core/src/main/flex/DukeConStyle.css
@@ -7,6 +7,13 @@
     color: #1AA3B1;
 }
 
+.talkListTitle {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 30px;
+    color: #1AA3B1;
+}
+
 .title {
     fontFamily: _sans;
     fontWeight: normal;
