--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -5,28 +5,42 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
         title="{resourceManager.getString('dukecon', 'main.title')}">
 
-  <fx:Metadata>
-    [ResourceBundle("dukecon")]
-  </fx:Metadata>
+    <fx:Metadata>
+        [ResourceBundle("dukecon")]
+    </fx:Metadata>
 
-  <fx:Script>
+    <fx:Script>
     <![CDATA[
-    import org.dukecon.controller.ConferenceController;
+        import org.dukecon.controller.ConferenceController;
+        import org.dukecon.controller.SimpleOAuthController;
+        import org.dukecon.controller.UserPreferenceController;
 
-    protected function onRefreshClicked(event:MouseEvent):void {
-      ConferenceController.instance.updateTalks();
-    }
+        protected function onRefreshClicked(event:MouseEvent):void {
+            ConferenceController.instance.updateTalks();
+            UserPreferenceController.instance.updateUserPreferences()
+        }
 
-    ]]>
+        protected function onLoginClicked(event:MouseEvent):void {
+            navigator.pushView(SimpleOAuthView);
+        }
+
+        protected function onLogoutClicked(event:MouseEvent):void {
+            SimpleOAuthController.instance.logout();
+        }
+        ]]>
   </fx:Script>
 
-  <s:VGroup width="100%" height="100%" horizontalAlign="center">
-    <s:Image source="@Embed('/conference-logo.jpg')"
-             width="100%" height="100%" scaleMode="letterbox"/>
-    <s:HGroup height="100%" verticalAlign="middle">
-      <s:Button id="refreshButton" label="{resourceManager.getString('dukecon', 'main.refresh')}"
-                click="onRefreshClicked(event)"/>
-    </s:HGroup>
-  </s:VGroup>
+    <s:VGroup id="content" width="100%" height="100%" horizontalAlign="center">
+        <s:Image source="@Embed('/conference-logo.jpg')"
+                 width="100%" height="100%" scaleMode="letterbox"/>
+        <s:VGroup height="100%" verticalAlign="middle">
+            <s:Button id="refreshButton" label="{resourceManager.getString('dukecon', 'main.refresh')}"
+                      click="onRefreshClicked(event)"/>
+            <s:Button id="loginButton" label="{resourceManager.getString('dukecon', 'main.login')}"
+                      click="onLoginClicked(event)" visible="{SimpleOAuthController.instance.accessToken == null}"/>
+            <s:Button id="logoutButton" label="{resourceManager.getString('dukecon', 'main.logout')}"
+                      click="onLogoutClicked(event)" visible="{SimpleOAuthController.instance.accessToken != null}"/>
+        </s:VGroup>
+    </s:VGroup>
 
 </s:View>
